# cybook

./: Cargo.toml
.cargo/: config.toml
cybuf/: Cargo.toml
cybuf/src/: buffer.rs  drawable.rs  framebuffer.rs  lib.rs
cygui/: Cargo.toml
cygui/examples/: button.rs  event.rs  geometrics.rs  text.rs
cygui/src/: lib.rs  window.rs
cygui/src/event/: event.rs  handler.rs  mod.rs
cygui/src/utils/: font.rs
cygui/src/widget/: button.rs  frame.rs  mod.rs  text.rs  widget.rs
cygui/src/widget/geometrics/: circle.rs  disc.rs  line.rs  mod.rs
cyio/: Cargo.toml
cyio/examples/: light.rs
cyio/src/: backlight.rs  event.rs  input.rs  lib.rs
utils/: Cargo.toml
utils/src/: color.rs  lib.rs
