[package]
name = "cygui"
version = "0.1.0"
authors = ["Louis Chauvet <louis.chauvet@free.fr>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cybuf = {path="../cybuf"}
cyio = {path="../cyio"}
utils = {path = "../utils"}
cgmath = "0.17"
fontdue = "0.1"